package nl.hva.dederdekamer.election_backend.model;

/**
 * Application roles used for authorization.
 * Extend with more roles when needed
 */
public enum RoleName {
    USER, ADMIN
}
